--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/mobile.css" media="(max-width: 320px)">
 </head>
 	<body>
-	<header class="container1">
+	<header>
 		<div class="container">
 			<h1>Meus Pacientes</h1>
 		</div>
@@ -23,6 +23,7 @@
 					<th>Altura</th>
 					<th>IMC</th>
 				</tr>
+				<h3>Para remover, click duas vezes no item.</h3>
 				<tr class="paciente">
 					<td class="info-nome">Leonardo</td>
 					<td class="info-peso">57</td>
@@ -46,24 +47,32 @@
 		</section>
 		<section>
 			<h2 class="add-pacie">Adicionar novo paciente</h2>
-			<form>
+			<form name="formuser">
 				<label for="name">Nome:</label>
-				<input id="campo-nome" type="text" placeholder="Digite o nome do paciente"/>
+				<input id="campo-nome" name="Tnome" type="text" />
 				<div class="campo-medio">
 					<label for="peso">Peso:</label>  
-					<input id="campo-peso" type="text" placeholder="Digite o peso do paciente"/>
+					<input id="campo-peso" name="Tpeso" type="text" />
 				</div>
 				<div class="campo-medio">
 					<label for="altura">Altura:</label>
-					<input id="campo-altura" type="text" placeholder="Digite a altura do paciente"/>
+					<input id="campo-altura" name="Taltura" type="text" />
 				</div>
-				<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
+				<button id="adicionar-paciente" class="botao bto-principal" onclick="validar()">
+				Adicionar
+				</button>
 			</form>
 		</section>
 		</div>
+		<footer>
+		<div id="copia">
+		<p>&copy; 2017 - Beatriz Duarte - Todos os direitos reservados</p>
+		<p><a href="https://www.linkedin.com/in/beatriz-duarte8000/" target="_blank">Linkedin</a> | <a href="https://github.com/Beatrizduarte" target="_blank">GitHub</a></p>
+		</div>
+		</footer>
 		<script src="js/percorre.js"></script>
 		<script src="js/calculojs.js"></script> 
-		<script src="js/imprime-nome.js"></script>
 		<script src="js/adiciona.js"></script>
+		<script src="js/jquery.js"></script>
 	</body>
 </html>
